--- a/E-Commerce.Infrastructure/E-Commerce.Infrastructure.csproj
+++ b/E-Commerce.Infrastructure/E-Commerce.Infrastructure.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="microsoft.entityframeworkcore" Version="8.0.7" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="8.0.7" />
   </ItemGroup>
