--- a/E-Commerce.Infrastructure/E-Commerce.Infrastructure.csproj
+++ b/E-Commerce.Infrastructure/E-Commerce.Infrastructure.csproj
@@ -21,6 +21,7 @@
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
     <ProjectReference Include="..\E-Commerce.Core\E-Commerce.Core.csproj" />
   </ItemGroup>
 
