--- a/E-Commerce.Infrastructure/E-Commerce.Infrastructure.csproj
+++ b/E-Commerce.Infrastructure/E-Commerce.Infrastructure.csproj
@@ -22,6 +22,7 @@
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
+	  <PackageReference Include="Stripe.net" Version="45.8.0" />
     <ProjectReference Include="..\E-Commerce.Core\E-Commerce.Core.csproj" />
   </ItemGroup>
 
